--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "react-router-dom": "^7.6.1",
     "recharts": "^2.15.3",
     "workbox-webpack-plugin": "^7.3.0",
-    "yup": "^1.6.1"
+    "yup": "^1.6.1",
+    "zustand": "^5.0.5"
   },
   "devDependencies": {
     "@types/react": "^19.1.2",
