--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@mui/x-date-pickers": "^8.5.0",
     "@supabase/supabase-js": "^2.49.9",
     "@tanstack/react-query": "^5.79.0",
+    "@tanstack/react-table": "^8.21.3",
     "@types/react-router-dom": "^5.3.3",
     "date-fns": "^4.1.0",
     "eslint-plugin-prettier": "^5.4.0",
