--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "aridos-rene-eladio-valdez-srl",
+  "name": "fidelix",
   "version": "1.0.0",
   "type": "module",
-  "description": "Sistema de gestión para la empresa Aridos Rene Eladio Valdez SRL",
+  "description": "Sistema de fidelización de clientes para PYMES",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
@@ -59,5 +59,6 @@
     "typescript-eslint": "^8.30.1",
     "vite": "^6.3.5",
     "vite-tsconfig-paths": "^5.1.4"
-  }
+  },
+  "packageManager": "pnpm@10.12.2+sha512.a32540185b964ee30bb4e979e405adc6af59226b438ee4cc19f9e8773667a66d302f5bfee60a39d3cac69e35e4b96e708a71dd002b7e9359c4112a1722ac323f"
 }
